--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "motion": "^12.23.9",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-cookie": "^8.0.1",
     "react-dom": "^19.0.0",
     "react-use-measure": "^2.1.7",
     "sonner": "^2.0.6",
