chore: update project name in package.json and add additional entries to .gitignore

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tanstack-start-example-basic",
+  "name": "sasto-sulav",
   "private": true,
   "sideEffects": false,
   "type": "module",
